--- a/_includes/head.html
+++ b/_includes/head.html
@@ -17,4 +17,6 @@
     <link rel="stylesheet" href="{{ "assets/css/prism.css" | prepend: site.baseurl }}">
     <link rel="stylesheet" href="{{ "assets/css/share.min.css" | prepend: site.baseurl }}">
     <link rel="stylesheet" href="{{ "assets/css/app.min.css" | prepend: site.baseurl }}">
+	<base href="{{ site.baseurl }}">
+
 </head>
